# tstlib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Include/testy/: testy.h
Include/tst/: tst.h
Src/: CMakeLists.txt  testy.cpp  tst.cpp
